--- a/744Project/Views/Transactions/Create.cshtml
+++ b/744Project/Views/Transactions/Create.cshtml
@@ -68,10 +68,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.storeID, "StoreName", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.StoreTransactions.First().Store.storeIP, "Store IP", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("storeID", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.storeID, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.StoreTransactions.First().Store.storeIP, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
