--- a/744Project/Views/Transactions/Edit.cshtml
+++ b/744Project/Views/Transactions/Edit.cshtml
@@ -63,7 +63,7 @@
         </div>*@
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.cardID, "cardID", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.cardID, "card ID", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("cardID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.cardID, "", new { @class = "text-danger" })
@@ -71,10 +71,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.storeID, "StoreID", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.StoreTransactions.First().Store.storeIP, "Store IP", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("storeID", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.storeID, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.StoreTransactions.First().Store.storeIP, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
