--- a/744Project/Views/CreditCards/Edit.cshtml
+++ b/744Project/Views/CreditCards/Edit.cshtml
@@ -68,11 +68,13 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.accountID, "accountID", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("accountID", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.accountID, "", new { @class = "text-danger" })
+                <div hidden ="hidden">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.accountID, "accountID", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("accountID", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.accountID, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
 
