--- a/744Project/Views/Shared/_Layout.cshtml
+++ b/744Project/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     {
 
 				<li>@Html.ActionLink("Network","Index","Network")</li>
-                <li>@Html.ActionLink("Stores", "Index", "Stores")</li>
+                <!--<li>Html.ActionLink("Stores", "Index", "Stores")</li>-->
                 <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>                
                 <li>@Html.ActionLink("Credit Cards", "Index", "CreditCards")</li>
                 <li>@Html.ActionLink("Transactions", "Index", "Transactions")</li>
