--- a/744Project/Views/CreditCards/Index.cshtml
+++ b/744Project/Views/CreditCards/Index.cshtml
@@ -21,44 +21,41 @@
                         @Html.DisplayNameFor(model => model.cardNumber)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.cardExpirationDate)
+                        @Html.DisplayNameFor(model => model.firstName)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.cardSecurityCode)
+                        @Html.DisplayNameFor(model => model.lastName)
                     </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.cardMaxAllowed)
-                    </th>
+
+
                     <th></th>
                 </tr>
 
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Account.accountNumber)
-                        </td>
-                        @*<td>
-                            @Html.DisplayFor(modelItem => item.Customer.customerFirstname)
-                        </td>*@
-                        <td>
-                            @Html.DisplayFor(modelItem => item.cardNumber)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.cardExpirationDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.cardSecurityCode)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.cardMaxAllowed)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.cardID }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.cardID }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.cardID })
-                        </td>
-                    </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Account.accountNumber)
+                    </td>
+                    @*<td>
+            @Html.DisplayFor(modelItem => item.Customer.customerFirstname)
+        </td>*@
+                    <td>
+                        @Html.DisplayFor(modelItem => item.cardNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.firstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.lastName)
+                    </td>
+
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.cardID }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.cardID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.cardID })
+                    </td>
+                </tr>
                 }
 
             </table>
