DB Changes: 1. I completed all the required changes for the db code. 2. I added the delete error message when trying to delete the last card, and removed the card limit.
Everything has been tested in the server and works fine

--- a/744Project/Views/CreditCards/Create.cshtml
+++ b/744Project/Views/CreditCards/Create.cshtml
@@ -59,13 +59,13 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.cardMaxAllowed, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.cardMaxAllowed, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.cardMaxAllowed, "", new { @class = "text-danger" })
                     </div>
-                </div>
+                </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.accountID, "Account Number", htmlAttributes: new { @class = "control-label col-md-2" })
