--- a/744Project/Views/CreditCards/Delete.cshtml
+++ b/744Project/Views/CreditCards/Delete.cshtml
@@ -54,14 +54,20 @@
                         @Html.DisplayFor(model => model.cardSecurityCode)
                     </dd>
 
-                    <dt>
+                    @*<dt>
                         @Html.DisplayNameFor(model => model.cardMaxAllowed)
                     </dt>
 
                     <dd>
                         @Html.DisplayFor(model => model.cardMaxAllowed)
-                    </dd>
+                    </dd>*@
 
+                </dl>
+
+                <dl>
+                    <dt>                        
+                        @Html.ValidationMessage("theLastCard", "", new { @class = "text-danger" })                        
+                    </dt>
                 </dl>
 
                 @using (Html.BeginForm())
