--- a/744Project/Views/Accounts/Create.cshtml
+++ b/744Project/Views/Accounts/Create.cshtml
@@ -126,13 +126,13 @@
                             @Html.ValidationMessageFor(model => model.creditCard.cardSecurityCode, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.LabelFor(model => model.creditCard.cardMaxAllowed, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.creditCard.cardMaxAllowed, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.creditCard.cardMaxAllowed, "", new { @class = "text-danger" })
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.creditCard.firstName, htmlAttributes: new { @class = "control-label col-md-2" })
