--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -3,76 +3,74 @@
 @{
     ViewBag.Title = "Network";
 }
-
-
-<script src="@Url.Content("~/Scripts/cytoscape.js")" type="text/javascript"></script>
-
+<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.css">
 <div class="row">
-	<div class="panel panel-default" style="margin-top:10px">
-		<div class="panel-body">
-			<div class="col-sm-4">
-				<button class="PauseButton btn btn-danger">pause</button>
-				<button class="PlayButton btn btn-success">play</button>
-			</div>
-			<div class="col-sm-4">
-				<h3 style="text-align: center;vertical-align: middle;">Network Layout</h3>
-			</div>
-			<div class="col-sm-4" style=" display: flex; align-items: center; justify-content: center;">
-				<input id="clickMe" style="display: block; margin-top: 10px;" class="btn btn-default" type="button" value="Save Configuration" onclick="exportPositions();" />
-			</div>
-		</div>
-	</div>
-	</div>
+    <div class="panel panel-default" style="margin-top:10px">
+        <div class="panel-body">
+            <div class="col-sm-4">
+                <button class="PauseButton btn btn-danger">pause</button>
+                <button class="PlayButton btn btn-success">play</button>
+            </div>
+            <div class="col-sm-4">
+                <h3 style="text-align: center;vertical-align: middle;">Network Layout</h3>
+            </div>
+            <div class="col-sm-4" style=" display: flex; align-items: center; justify-content: center;">
+                <input id="clickMe" style="display: block; margin-top: 10px;" class="btn btn-default" type="button" value="Save Configuration" onclick="exportPositions();" />
+            </div>
+        </div>
+    </div>
+</div>
 
-	<div class="panel panel-default" style=" height: 500px; width:100%;">
-		<div id="cy" class="panel-body" style="height: 500px; width:100%;">
-		</div>
-	</div>
-
-
-	<div class="panel panel-default">
-		<div class="panel-body">
-			<div class="row">
-				<table class="table table-bordered">
-					<tr><th>Transaction Id</th><th>Store Ip</th><th>Encrypted Amount</th><th>Action</th></tr>
-					@foreach (var trans in Model.transactions)
-					{
-						<tr>
-							<td>@trans.Id</td>
-							<td>@trans.storeIp</td>
-							<td>@trans.transactionAmount</td>
-							<td><button class="SendTransaction btn btn-default" id="@trans.storeIp">Send</button></td>
-						</tr>
-					}
-				</table>
-				
-			</div>
-			<div class="col-sm-4" style="color:Red;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
-				Processing Center
-			</div>
-			<div class="col-sm-4" style="color:Blue;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
-				Relay
-			</div>
-			<div class="col-sm-4" style="color:Yellow;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
-				Store
-			</div>
-
-		</div>
-	</div>
+<div class="panel panel-default" style=" height: 500px; width:100%;">
+    <div id="cy" class="panel-body" style="height: 500px; width:100%;">
+    </div>
+</div>
 
 
-		<style type="text/css">
-			body {
-				background-image: url(../../stock-internet.jpg);
-			}
-		</style>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="row">
+            <table class="table table-bordered">
+                <tr><th>Transaction Id</th><th>Store Ip</th><th>Encrypted Amount</th><th>Action</th></tr>
+                @foreach (var trans in Model.transactions)
+                {
+                    <tr>
+                        <td>@trans.Id</td>
+                        <td>@trans.storeIp</td>
+                        <td>@trans.transactionAmount</td>
+                        <td><button class="SendTransaction btn btn-default" id="@trans.storeIp">Send</button></td>
+                    </tr>
+                }
+            </table>
+
+        </div>
+        <div class="col-sm-4" style="color:Red;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+            Processing Center
+        </div>
+        <div class="col-sm-4" style="color:Blue;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+            Relay
+        </div>
+        <div class="col-sm-4" style="color:Yellow;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+            Store
+        </div>
+
+    </div>
+</div>
 
 
+<style type="text/css">
+    body {
+        background-image: url(../../stock-internet.jpg);
+    }
+</style>
 
-
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.js"></script>
+<script src="@Url.Content("~/Scripts/cytoscape.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/cytoscape-qtip.js")" type="text/javascript"></script>
 @section Scripts{
 
-	<script>
+    <script>
 
 	/* ================================================================================================
 										Cytoscape SETUP SECTION
@@ -118,7 +116,6 @@
 		//RIGHT HERE IS WHERE I GET THE ELEMENTS FROM THE MODEL
 		elements: convertToCytoscape()
 	});
-
 
 	// This function converts the JSON representation of the Model into the Cytoscape elements
 	function convertToCytoscape() {
@@ -188,7 +185,7 @@
 		});
 	}
 
-		
+
 
 	/* ================================================================================================
 										ANIMATION SECTION
@@ -202,7 +199,7 @@
 		return edge.data('weight');
 	});
 
-	// When one of the transaction "Send" buttons are clicked, this is called which starts the animation 
+	// When one of the transaction "Send" buttons are clicked, this is called which starts the animation
 	$(".SendTransaction").click(function () {
 		// Holds the product ID of the clicked element
 		var storeIp = $(this).attr('id');
@@ -216,16 +213,34 @@
 	});
 
 	//Starts the animation on the click of a node
-	cy.on('click', 'node', function (evt) {
-		console.log('clicked ' + this.id());
-		var pathToJ = dijkstra.pathTo(cy.getElementById(this.id()));
-		var i = pathToJ.length;
-		/*console.log(i);
-		console.log(pathToJ);
-		console.log("=============================================================");*/
-		recursivePath(pathToJ, pathToJ[i - 1], i - 1);
-	});
+	//cy.on('click', 'node', function (evt) {
+	//	console.log('clicked ' + this.id());
+	//	var pathToJ = dijkstra.pathTo(cy.getElementById(this.id()));
+	//	var i = pathToJ.length;
+	//	/*console.log(i);
+	//	console.log(pathToJ);
+	//	console.log("=============================================================");*/
+	//	recursivePath(pathToJ, pathToJ[i - 1], i - 1);
+	//});
 
+        // Popup info and queue
+        cy.nodes().qtip({
+            content: function () {
+
+                return this.id() + ", Queue: ";
+            },
+            position: {
+                my: 'top center',
+                at: 'bottom center'
+            },
+            style: {
+                classes: 'qtip-bootstrap',
+                tip: {
+                    width: 16,
+                    height: 8
+                }
+            }
+        });
 
 	//This function recursively calls itself to do the animation from node to node. the elements from the Store to the Processing
 	// Center are stored in the 'stack' parameter, while the current element is the 'item', and the current index is 'i'.
@@ -313,5 +328,5 @@
 				element.play();
 			});
 		});
-	</script>
+    </script>
 }
